# classification-pipeline

./: .flake8  .gitignore  README.md  pyproject.toml
notebooks/: process.ipynb
src/: README.md  cpr.py  create_pipeline_root.sh  run.py  training_pipeline.py  upload_pipeline.py
src/api/: Dockerfile  main.py  requirements.txt
src/components/: create_image.sh
src/components/data_preparation/: Dockerfile  data_preparation.py  kfp_config.ini  runtime-requirements.txt
src/components/data_preparation/component_metadata/: data_preparation.yaml
src/components/training/: Dockerfile  kfp_config.ini  runtime-requirements.txt  training.py
src/components/training/component_metadata/: training.yaml
src/prediction_pipeline/: predictor.py  requirements.txt
