[tool.poetry]
name = "classification-pipeline"
version = "0.1.0"
description = "Public example"
authors = ["Ian Yu <ian.yu@arc.com.co>"]
readme = "README.md"
packages = [{include = "classification_pipeline"}]

[tool.poetry.dependencies]
python = "3.10.11"
fsspec = "^2023.6.0"
gcsfs = "^2023.6.0"
google-cloud = "^0.34.0"
google-cloud-aiplatform = {extras = ["prediction"], version = "^1.26.1"}
google-cloud-pipeline-components = "^2.0.0"
google-cloud-secret-manager = "^2.16.1"
kfp = "^2.0.1"
pandas = "^2.0.2"
transformers = "^4.30.2"
jsonlines = "^3.1.0"
scikit-learn = "^1.2.2"
evaluate = "^0.4.0"
datasets = "^2.13.1"
torch = "^2.0.1"
beautifulsoup4 = "^4.12.2"
black = "^23.3.0"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80